--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "underscore.inflection",
+  "name": "lodash.inflection",
   "version": "1.2.0",
-  "description": "ActiveSupport::Inflector, for underscore!",
+  "description": "ActiveSupport::Inflector, for lodash!",
   "main": "index.js",
-  "browser": "lib/underscore.inflection.js",
+  "browser": "lib/lodash.inflection.js",
   "engines": {
     "node": ">=0.10.0 <0.12"
   },
@@ -17,10 +17,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jeremyruppel/underscore.inflection.git"
+    "url": "git://github.com/tuvistavie/lodash.inflection.git"
   },
   "keywords": [
-    "underscore",
+    "lodash",
     "inflection",
     "inflector",
     "activesupport",
@@ -30,9 +30,9 @@
   "author": "Jeremy Ruppel",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jeremyruppel/underscore.inflection/issues"
+    "url": "https://github.com/tuvistavie/lodash.inflection/issues"
   },
-  "homepage": "https://github.com/jeremyruppel/underscore.inflection",
+  "homepage": "https://github.com/tuvistavie/lodash.inflection",
   "devDependencies": {
     "chai": "~1.9.1",
     "coveralls": "~2.11.1",
@@ -41,9 +41,9 @@
     "gulp-jscoverage": "~0.1.0",
     "gulp-jscs": "~0.6.0",
     "jscoverage": "~0.5.5",
+    "lodash": "^3.10.0",
     "mocha": "^1.21.4",
-    "mocha-lcov-reporter": "0.0.1",
-    "underscore": "~1.7.0"
+    "mocha-lcov-reporter": "0.0.1"
   },
   "dependencies": {}
 }
