--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "mocha-lcov-reporter": "~0.0.2",
     "lodash": "^3.10.1",
     "mversion": "^1.10.1",
+    "lodash": "^4.0.0",
+    "mocha": "^1.21.4",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "dependencies": {}
 }
