--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "lodash-inflection",
   "version": "1.3.2",
   "dependencies": {
-    "lodash": "~3.10.1"
+    "lodash": "^4.6"
   },
   "main": "lib/lodash-inflection.js",
   "ignore": [
